feat: add StreamTransport and well-known services for Nodemailer
- Implemented StreamTransport for streaming email messages.
- Added well-known services for various email providers in services.json.
- Introduced XOAuth2 class for OAuth2 token generation and management.
- Updated package.json to include Nodemailer as a dependency.
- Enhanced user routes with OTP functionality for password reset.
- Cleaned up server.js by removing unnecessary lines.

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ CLOUD_NAME=dw9wsfbke
 API_KEY=731932947649256
 API_SECRET=5zJmJtC8hHWCYfHa_-J5ZkVoNAw
 JWT_SECRET=mySuperSecretKey
+MAIL_USER=muhammedsinan.123890@gmail.com
+MAIL_PASS=ocfhpgmtiindyzyw
+
+
