--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
 MONGO_URI=mongodb+srv://sinandev:sinan123@cluster0.d5o7t4m.mongodb.net/
 CLOUDINARY_CLOUD_NAME=dw9wsfbke
-CLOUDINARY_API_KEY=731932947649256
-CLOUDINARY_API_SECRET=5zJmJtC8hHWCYfHa_-J5ZkVoNAw
-JWT_SECRET=mySuperSecretKey
+CLOUDINARY_API_KEY=7319329
+CLOUDINARY_API_SECRET=5zJmJ
+JWT_SECRET=mySuperSecret
 MAIL_USER=muhammedsinan.123890@gmail.com
-MAIL_PASS=ocfhpgmtiindyzyw
+MAIL_PASS=ocfhpg
